#
# Coronaton Paradigma
#
[workspace]
members = [
    ".",
#    "lib/futures-mpsc-lossy",
#    "lib/hyper-balance",
#    "lib/pkg_crypt",
#    "lib/router",
#    "lib/stack",
#    "lib/task",
#    "lib/timeout",
]

[package]
name = "coronaton"
version = "1.0.0"
authors = ["Gonzalo Aguilar <gaguilar@level2crm.com>"]
publish = false

[features]
default = ["flaky_tests"]
# Disable to skip certain tests that should not be run on CI.
flaky_tests = []

[dependencies]
log = "0.4"
env_logger = "0.6"
clap = { version = "2.33", features = ["suggestions", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.106"
csv = "1.1"

datafusion = {git="https://github.com/apache/arrow.git", version = "1.0.0-SNAPSHOT"}
arrow = {git="https://github.com/apache/arrow.git", version = "1.0.0-SNAPSHOT"}


[dev-dependencies]
#quickcheck = { version = "0.8", default-features = false }

# Debug symbols end up chewing up several GB of disk space, so better to just
# disable them.
[profile.dev]
debug = true
[profile.test]
debug = false

#[patch.crates-io]
#webpki = { git = "https://github.com/seanmonstar/webpki", branch = "cert-dns-names" }

# https://users.rust-lang.org/t/cargo-test-internal-packages/5187/2
#[[test]]
#name = "pkg_crypt"
#path = "lib/pkg_crypt/src/lib.rs" 
